--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  folding_cell: "^0.1.2"
+  folding_cell: ^0.1.2
+  gradient_widgets: ^0.5.1
 
 dev_dependencies:
   snaplist: ^0.1.8
