--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   animated_text_kit: ^2.0.0
   folding_cell: ^0.1.2
   gradient_widgets: ^0.5.1
+  google_fonts: ^0.3.2
+  font_awesome_flutter: ^8.5.0
 
 dev_dependencies:
   snaplist: ^0.1.8
