--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   gradient_widgets: ^0.5.1
   google_fonts: ^0.3.2
   font_awesome_flutter: ^8.5.0
+  url_launcher: ^5.4.1
+
 
 dev_dependencies:
   snaplist: ^0.1.8
