--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,9 @@ dependencies:
   google_fonts: ^0.3.2
   font_awesome_flutter: ^8.5.0
   url_launcher: ^5.4.1
+  http: ^0.12.0+4
+  connectivity: ^0.4.6+2
+
 
 
 dev_dependencies:
