--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ environment:
   sdk: ">=2.1.0 <3.0.0"
 
 dependencies:
+  
   flutter:
     sdk: flutter
 
@@ -31,6 +32,8 @@ dependencies:
   url_launcher: ^5.4.1
   http: ^0.12.0+4
   connectivity: ^0.4.6+2
+  auto_size_text: ^2.1.0
+  
 
 
 
@@ -57,6 +60,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - assets/logo.png
     - assets/department_images/
     - assets/animations/
 
