--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ dependencies:
   font_awesome_flutter: ^8.5.0
   url_launcher: ^5.4.1
   http: ^0.12.0+4
-  connectivity: ^0.4.6+2
+  photo_view: ^0.9.1
 
 
 
@@ -59,6 +59,7 @@ flutter:
     - assets/
     - assets/department_images/
     - assets/animations/
+    - assets/veyg_2019/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
