--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
   photo_view: ^0.9.1
   timeline_list: ^0.0.5
   flutter_awesome_alert_box: ^1.0.1
+  nice_button: ^0.1.7
+  
+
 
 
 
